2007-05-28  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py (Vishnu.addMessage): Change
	prototype to perhaps be easier.
	(Vishnu.addMessageObject): Fix typo.
	(Vishnu._addComponent): Clear any loadComponent-related messages
	for a component if we actually get to the point of calling
	addComponent.
	(Vishnu._updateStateFromConf): If, when loading a configuration,
	we find that there is already a component running with this name,
	warn the admin if the configurations are different without
	modifying the manager's state.
	(Vishnu.emptyPlanet): Clean all messages from the planet.
	(Vishnu._startComponents, Vishnu._loadComponentConfiguration): No
	need to pass conf in here.

2007-05-28  Michael Smith <msmith@fluendo.com>

	* flumotion/ui/trayicon.py:
	  Connect to the correct callback in the tray icon's right click menu.
	  Fixes #633.

2007-05-28  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/component/consumers/httpstreamer/http.glade:
	* flumotion/component/consumers/httpstreamer/http.py:
	  Display current stream bitrate in addition to lifetime average
	  bitrate.
	  Fixes #636.

2007-05-28  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_config.py (TestDictDiff.testHumanReadable)
	(TestDictDiff.testRecursive, TestDictDiff.testSimple): Testes.

	* flumotion/common/config.py (dictDiffMessageString, dictDiff):
	Add some awesome functions for diffing dicts of dicts and other
	things.

2007-05-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/config.py (BaseConfigParser._parseEater):
	Raise a ConfigError when an eater node is parsed without
	child feed nodes.

2007-05-28  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Make link() return a deferred that fires when the pipeline goes
	  playing; removes special-casing in statechange message handlers.
	* flumotion/component/feedcomponent.py: